--- a/staile.css
+++ b/staile.css
@@ -181,7 +181,7 @@
         }
         #navshit  {
             color:goldenrod;
-            font-size: 35px;
+            font-size: 40px;
             margin-right: 20%;
             width: 700px;
             padding-top: 1%;
@@ -239,7 +239,7 @@
             padding: 1px 5px;
             margin-right: 5px;
             width: 100%;
-            height: 500px;
+            height: 300px;
             
         }
         .flex-container {
@@ -280,8 +280,44 @@
               padding-right: 100px;
           
           }
-          
+
+          #produk {
+            position: relative;
+            text-align: center;
+            top: 60px;
+            padding-bottom: 90px;
+            padding-top: 5%;
+        }
         
-          
-          
+        .team {
+            
+        }
+        
+        .euro {
+            display: inline-block;
+            margin-top: 4px;
+            padding: 10px auto;
+            text-align: center;
+            width: 215px;
+        }
+        
+        .euro img {
+            padding-top: 40px;
+            width: 200px;
+            height: 190px;
+            /*border-radius: 10%;*/
+            background-size: cover;
+            position: relative;
+        }
+
+        .subicon:hover {
+            display: inline-block;
+            height: 1   00px;
+            margin-top: 4px;
+            padding: 30px auto;
+            text-align: center;
+            width: 215px;
+            background-color: black;
+            color: red;
+        }
         
